--- a/index.html
+++ b/index.html
@@ -5,15 +5,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/style.css">
     <title>Document</title>
 </head>
 
 <body>
+<header class="container-fluid">
+<div class="row">
+    <div class="col">
+        <h1>Pokedex</h1>
+    </div>
+</div>
+</header>
+<main class="container-fluid">
+<div class="row">
+    <div class="col-3">
+        <h1>Wild Pokeomn</h1>
+        <ol></ol>
+        <button onclick="app.pokemonController.find()"></button>
+    </div>
+    <div class="col-6"></div>
+    <div class="col-3"></div>
+</div>
+</main>
 
-
-
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.js" integrity="sha256-XmdRbTre/3RulhYk/cOBUMpYlaAp2Rpo/s556u0OIKk=" crossorigin="anonymous"></script>
     <script src="app/main.js" type="module"></script>
 </body>
 
