--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 <div class="row">
     <div class="col-3">
         <h1>Wild Pokeomn</h1>
-        <ol></ol>
+        <ol id="pokemon-list">
+
+        </ol>
         <button onclick="app.pokemonController.find()"></button>
     </div>
     <div class="col-6"></div>
