--- a/index.html
+++ b/index.html
@@ -27,7 +27,16 @@
         </ol>
         <button onclick="app.pokemonController.find()"></button>
     </div>
-    <div class="col-6"></div>
+    <div class="col-6" id="card">
+            <div class="card" style="width: 18rem;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+    </div>
     <div class="col-3"></div>
 </div>
 </main>
