--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
     <div class="col-6" id="card">
             
     </div>
-    <div class="col-3"></div>
+    <div class="col-3" >
+        <h1>Caught Pokeomn</h1>
+        <ol id="caught">
+
+        </ol>
+    </div>
 </div>
 </main>
 
