--- a/index.html
+++ b/index.html
@@ -5,41 +5,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/style.css">
-    <title>Document</title>
+    <title>pokedex</title>
 </head>
 
 <body>
-<header class="container-fluid">
-<div class="row">
-    <div class="col">
-        <h1>Pokedex</h1>
-    </div>
-</div>
-</header>
-<main class="container-fluid">
-<div class="row">
-    <div class="col-3">
-        <h1>Wild Pokeomn</h1>
-        <ol id="pokemon-list">
+    <header class="container-fluid">
+        <div class="row">
+            <div class="col">
+                <h1>Pokedex</h1>
+            </div>
+        </div>
+    </header>
+    <main class="container-fluid">
+        <div class="row">
+            <div class="col-3">
+                <h1>Wild Pokeomn</h1>
+                <ol id="pokemon-list">
 
-        </ol>
-        <button onclick="app.pokemonController.find()"></button>
-    </div>
-    <div class="col-6" id="card">
-            
-    </div>
-    <div class="col-3" >
-        <h1>Caught Pokeomn</h1>
-        <ol id="caught">
+                </ol>
+                <button onclick="app.pokemonController.find()"></button>
+            </div>
+            <div class="col-6" id="card">
 
-        </ol>
-    </div>
-</div>
-</main>
+            </div>
+            <div class="col-3">
+                <h1>Caught Pokeomn</h1>
+                <ol id="caught">
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.js" integrity="sha256-XmdRbTre/3RulhYk/cOBUMpYlaAp2Rpo/s556u0OIKk=" crossorigin="anonymous"></script>
+                </ol>
+            </div>
+        </div>
+    </main>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.js"
+        integrity="sha256-XmdRbTre/3RulhYk/cOBUMpYlaAp2Rpo/s556u0OIKk=" crossorigin="anonymous"></script>
     <script src="app/main.js" type="module"></script>
 </body>
 
