--- a/index.html
+++ b/index.html
@@ -8,37 +8,32 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/style.css">
-    <title>pokedex</title>
+    <title>Document</title>
 </head>
 
-<body>
-    <header class="container-fluid">
-        <div class="row">
-            <div class="col">
-                <h1>Pokedex</h1>
-            </div>
+<body class="container-fluid">
+    <div class="row justify-content-center">
+        <div class="col-2">
+            <h1>Pokedex</h1>
         </div>
-    </header>
-    <main class="container-fluid">
-        <div class="row">
-            <div class="col-3">
-                <h1>Wild Pokeomn</h1>
-                <ol id="pokemon-list">
+    </div>
+    <div class="row justify-content-between">
+        <div class="col-3 text-left card">
+            <h1>Wild Pokemon</h1>
+            <ol id="pokemon-list">
 
-                </ol>
-                <button onclick="app.pokemonController.find()"></button>
-            </div>
-            <div class="col-6" id="card">
-
-            </div>
-            <div class="col-3">
-                <h1>Caught Pokeomn</h1>
-                <ol id="caught">
-
-                </ol>
-            </div>
+            </ol>
         </div>
-    </main>
+        <div class="col-3 text-center" id="card">
+
+        </div>
+        <div class="col-4 card">
+            <h1>Caught Pokemon</h1>
+            <ol id="caught" class="text-left">
+
+            </ol>
+        </div>
+    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.js"
         integrity="sha256-XmdRbTre/3RulhYk/cOBUMpYlaAp2Rpo/s556u0OIKk=" crossorigin="anonymous"></script>
