--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
             </ol>
         </div>
-        <div class="col-3 text-center" id="card">
+        <div class="col-3 text-center overflow" id="card">
 
         </div>
         <div class="col-4 card">
@@ -41,3 +41,8 @@
 </body>
 
 </html>
+<style>
+    .overflow {
+        overflow: scroll
+    }
+</style>
