pagination not quite fixed, but functional

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             <ol id="pokemon-list">
 
             </ol>
+            <button onclick="app.pokemonController.previous()">previous</button>
+            <button onclick="app.pokemonController.next()">next</button>
         </div>
         <div class="col-3 text-center overflow" id="card">
 
@@ -43,6 +45,6 @@
 </html>
 <style>
     .overflow {
-        overflow: scroll
+        overflow: scroll;
     }
 </style>
